# diploma-stn-vit

./: .gitignore  .gitmodules  Dockerfile  pyproject.toml  tmp.py
diploma_stn_vit/ViT-pytorch/: train.py
diploma_stn_vit/ViT-pytorch/models/: modeling.py
diploma_stn_vit/ViT-pytorch/utils/: data_utils.py
diploma_stn_vit/utils/: extract_train_archives.py  organize_val_dir.py
logs/imagenet_vitb16_scratch/: events.out.tfevents.1775068475.compute-vm-28-119-400-ssd-1774183247226.36858.0  events.out.tfevents.1775068682.compute-vm-28-119-400-ssd-1774183247226.37010.0  events.out.tfevents.1775068784.compute-vm-28-119-400-ssd-1774183247226.37176.0
