[project]
name = "diploma-stn-vit"
version = "0.1.0"
description = ""
authors = [
    {name = "CameCome",email = "dim.dimof3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scipy (>=1.17.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
