[project]
name = "diploma-stn-vit"
version = "0.1.0"
description = ""
authors = [
    {name = "CameCome",email = "dim.dimof3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "scipy (>=1.17.1,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "ml-collections (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
